# Serving

./: .gitignore
cmake/: paddlepaddle.cmake
core/configure/: CMakeLists.txt
core/cube/cube-api/: CMakeLists.txt
core/cube/cube-builder/: CMakeLists.txt
core/cube/cube-server/: CMakeLists.txt
core/general-client/: CMakeLists.txt
core/general-server/: CMakeLists.txt
core/pdcodegen/: CMakeLists.txt
core/pdcodegen/plugin/: strutil.h  substitute.cc
core/predictor/: CMakeLists.txt
core/predictor/common/: inner_common.h
core/predictor/framework/: bsf.h
core/sdk-cpp/: CMakeLists.txt
core/sdk-cpp/include/: common.h  predictor.hpp  stub_impl.h
core/util/: CMakeLists.txt
paddle_inference/paddle/: CMakeLists.txt
python/: CMakeLists.txt  requirements_mac.txt  setup.py.client.in  setup.py.server.in
python/paddle_serving_server/: util.py
tools/cpp_examples/demo-client/: CMakeLists.txt
tools/cpp_examples/demo-serving/: CMakeLists.txt
tools/cpp_examples/elastic-ctr/serving/: CMakeLists.txt
